# fastapi_continue

./: README.md  items_views.py  main.py  pyproject.toml
core/: config.py
test/: pyproject.toml
users/: crud.py  schemas.py
