[tool.poetry]
name = "tester"
version = "0.1.0"
description = ""
authors = ["Marat Akhmediev <akhmediev2003@mail.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-mail = "^1.4.1"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
fastapi = "^0.110.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.28"}
aiosqlite = "^0.20.0"
pydantic-settings = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
